# swapi-service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
docs/: coverage.md  dev-env.md
src/alembic/: env.py
src/alembic/versions/: 3e8b71da0089_create_models_and_associations.py  7000605ec28c_add_character_film_and_starship.py
src/api/: main.py
src/api/config/: logging.py  settings.py
src/api/core/: base_repository.py  exceptions.py  lifespan.py  middleware.py  schemas.py
src/api/core/pagination/: __init__.py  schemas.py  service.py
src/api/core/populatedb/: routes.py  schemas.py  service.py
src/api/core/repositories/: base.py
src/api/domains/: associations.py
src/api/domains/characters/: models.py  repository.py  routes.py  schemas.py  service.py
src/api/domains/films/: models.py  repository.py  routes.py  schemas.py  service.py
src/api/domains/starships/: models.py  repository.py  routes.py  schemas.py  service.py
src/api/storage/: postgres.py
src/api/utils/: healthcheck.py  url_helpers.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py
tests/unit/config/: test_logging.py
tests/unit/core/: test_base_repository.py  test_lifespan.py  test_middleware.py
tests/unit/core/pagination/: __init__.py  test_service.py
tests/unit/core/populatedb/: test_service.py
tests/unit/domains/characters/: test_repository.py  test_service.py
tests/unit/storage/: test_postgres.py
tests/unit/utils/: test_healthcheck.py  test_url_helpers.py
(+4 files in other folders)
